# airline

./: .gitignore  README.md  docker-compose.kafka.yml  pyproject.toml  render.yaml
data/mock/: dcs_coupon_flown.json  gds_settlements.xml  interline_claims.json  ota_webhook.json  pss_tickets.csv
frontend/: README.md
frontend/src/: App.css  App.tsx  index.css
sql/: supabase_phase2_schema.sql
src/flightledger/: __init__.py  api.py  pipeline.py  runtime.py
src/flightledger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/flightledger/adapters/: __init__.py  base.py  dcs_stream.py  gds_xml.py  interline_rest.py  ota_webhook.py  pss_csv.py
src/flightledger/audit/: __init__.py  lineage.py
src/flightledger/bus/: __init__.py  factory.py  fanout.py  in_memory.py  kafka.py  routing.py
src/flightledger/db/: __init__.py  repositories.py  supabase_client.py
src/flightledger/matching/: __init__.py  coupon_matcher.py
src/flightledger/models/: canonical.py
src/flightledger/orchestrator/: __init__.py  dag.py
src/flightledger/recon/: __init__.py  reconciliation.py
src/flightledger/settlement/: __init__.py  engine.py
src/flightledger/simulation/: __init__.py  engine.py
src/flightledger/stores/: __init__.py  ticket_lifecycle.py
tests/: test_adapters.py  test_api.py  test_api_phase2_endpoints.py  test_audit_phase2.py  test_coupon_matcher_phase2.py  test_dag_phase2.py  test_kafka_bus.py  test_pipeline.py  test_reconciliation_phase2.py  test_settlement_phase2.py  test_ticket_lifecycle_store.py
