[project]
name = "flightledger"
version = "0.1.0"
description = "FlightLedger phase-1 foundation: canonical model, adapters, and local pipeline demo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "kafka-python>=2.1,<3",
  "pydantic>=2.8,<3",
  "supabase>=2.7,<3",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
